recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:8: error: a is already defined as variable a
	var a=0
            ^PolygonFractal:7: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var a:Int
            ^