recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
if(levels==0){
	avance(length)
	
}else{
	var a:Int
	var a=0
	polygonFractal(levels-1, sides, length, shrink)
	a=sides-1
	droite(360/sides)
	if(a>0){
		polygonFractal(levels-1, sides, length, shrink)
		a=sides-1
		droite(360/sides)
			if(a>0){
			polygonFractal(levels-1, sides, length, shrink)
			a=sides-1
			droite(360/sides)
				if(a>0){
				polygonFractal(levels-1, sides, length, shrink)
				a=sides-1
				droite(360/sides)
					if(a>0){
					polygonFractal(levels-1, sides, length, shrink)
					a=sides-1
					droite(360/sides)
	}
}	
}	
}
}
}